feat: create gh-pages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       rel="stylesheet"
     />
     <title>Document</title>
-  </head>
-  <body></body>
+  <link href="main.css" rel="stylesheet"></head>
+  <body><script type="text/javascript" src="main.js"></script></body>
 </html>
